# grob-chess

./: Cargo.toml  README.md
.github/workflows/: rust.yml
board/src/: bitboard.rs  pieces.rs
crates/board/: Cargo.toml  README.md
crates/engine/: Cargo.toml  README.md
crates/game/: Cargo.toml  README.md
crates/game/src/: board.rs  cache.rs  castling_rights.rs  game.rs  hashmap.rs  lib.rs  perft.rs  pieces.rs  position.rs  position_base.rs  primitives.rs  raw_position.rs  search.rs  square.rs  transposition.rs  waiter.rs  zobrist.rs
crates/game/src/game/: position.rs
crates/game/src/game/position/: base.rs  lan.rs  zobrist.rs
crates/game/src/primitives/: castling_rights.rs
crates/game/src/search/: scheduler.rs  score.rs  signals.rs  worker.rs
crates/game/src/search/transposition/: table.rs  table_base.rs
crates/grob_core/: Cargo.toml  README.md
crates/grob_uci/: Cargo.toml  README.md
crates/multithreading/: Cargo.toml  README.md
crates/pico_chess/: Cargo.toml
crates/pico_chess_proc_macro/: Cargo.toml
crates/position/: Cargo.toml  README.md
game/: Cargo.toml  README.md
game/src/: game.rs  lib.rs  main.rs  move_list.rs  perft.rs  search.rs  testing.rs  transposition_table.rs
position/: Cargo.toml  README.md
position/src/: bitboard.rs  board.rs  castling_rights.rs  indexing.rs  lib.rs  move_calculation.rs  move_generation.rs  move_list.rs  pieces.rs  position.rs  position_hash.rs  prelude.rs  square.rs
src/: bitboard.rs  game.rs  lib.rs  search.rs  table_generation.rs  testing.rs  transposition_table.rs
uci/: Cargo.toml  README.md
(+91 files in other folders)
